--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@gluestack-style/react": "^1.0.52",
-    "@gluestack-ui/themed": "^1.1.18",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "native-base": "3.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "3.3.2",
@@ -23,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.1.3"
   },
   "private": true
