--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -16,6 +17,7 @@
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "native-base": "^3.4.28",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
