--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
@@ -23,7 +24,8 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^13.4.0"
+    "react-native-svg": "^13.4.0",
+    "expo-file-system": "~16.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
