--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^13.4.0",
-    "zod": "^3.23.0"
+    "zod": "^3.23.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
