--- a/package.json
+++ b/package.json
@@ -11,32 +11,33 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/vector-icons": "^14.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-file-system": "~16.0.9",
-    "expo-font": "~11.10.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.5",
+    "expo-image-picker": "~15.0.4",
+    "expo-status-bar": "~1.12.1",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^13.4.0",
-    "zod": "^3.23.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native": "^0.74.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "react-native-svg-transformer": "^1.3.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
